--- a/projects/MobileDashboard/force-app/main/default/translations/de.translation-meta.xml
+++ b/projects/MobileDashboard/force-app/main/default/translations/de.translation-meta.xml
@@ -157,6 +157,31 @@
     >Benötigt mehr Platz in der Vertikale. Wird für lange Feldnamen empfohlen.</label>
     </customLabels>
     <customLabels>
+        <name>MobileDashboard_card_modal_design_tab_example_my_sa</name>
+        <label>Meine Servicetermine</label>
+    </customLabels>
+    <customLabels>
+        <name
+    >MobileDashboard_card_modal_design_tab_example_cannot_complete</name>
+        <label>Kann nicht abgeschlossen werden</label>
+    </customLabels>
+    <customLabels>
+        <name>MobileDashboard_card_modal_design_tab_example_canceled</name>
+        <label>Abgebrochen</label>
+    </customLabels>
+    <customLabels>
+        <name>MobileDashboard_card_modal_design_tab_example_completed</name>
+        <label>Abgeschlossen</label>
+    </customLabels>
+    <customLabels>
+        <name>MobileDashboard_card_modal_design_tab_example_scheduled</name>
+        <label>Geplant</label>
+    </customLabels>
+    <customLabels>
+        <name>MobileDashboard_card_modal_design_tab_example_in_progress</name>
+        <label>Wird ausgeführt</label>
+    </customLabels>
+    <customLabels>
         <name>MobileDashboard_card_modal_design_tab_card_data_title</name>
         <label>Kartendaten</label>
     </customLabels>
