--- a/projects/MobileDashboard/force-app/main/default/translations/fi.translation-meta.xml
+++ b/projects/MobileDashboard/force-app/main/default/translations/fi.translation-meta.xml
@@ -157,6 +157,31 @@
     >Säästää vaakasuoraa tilaa. Suositellaan pitkille kenttien nimille.</label>
     </customLabels>
     <customLabels>
+        <name>MobileDashboard_card_modal_design_tab_example_my_sa</name>
+        <label>Omat palvelutapaamiset</label>
+    </customLabels>
+    <customLabels>
+        <name
+    >MobileDashboard_card_modal_design_tab_example_cannot_complete</name>
+        <label>Ei voi suorittaa loppuun</label>
+    </customLabels>
+    <customLabels>
+        <name>MobileDashboard_card_modal_design_tab_example_canceled</name>
+        <label>Peruutetut</label>
+    </customLabels>
+    <customLabels>
+        <name>MobileDashboard_card_modal_design_tab_example_completed</name>
+        <label>Valmiit</label>
+    </customLabels>
+    <customLabels>
+        <name>MobileDashboard_card_modal_design_tab_example_scheduled</name>
+        <label>Ajoitetut</label>
+    </customLabels>
+    <customLabels>
+        <name>MobileDashboard_card_modal_design_tab_example_in_progress</name>
+        <label>Kesken</label>
+    </customLabels>
+    <customLabels>
         <name>MobileDashboard_card_modal_design_tab_card_data_title</name>
         <label>Kortin data</label>
     </customLabels>
