--- a/projects/MobileDashboard/force-app/main/default/translations/in.translation-meta.xml
+++ b/projects/MobileDashboard/force-app/main/default/translations/in.translation-meta.xml
@@ -157,6 +157,31 @@
     >Menggunakan lebih banyak ruang vertikal. Direkomendasikan untuk nama bidang isian yang panjang.</label>
     </customLabels>
     <customLabels>
+        <name>MobileDashboard_card_modal_design_tab_example_my_sa</name>
+        <label>Janji Temu Layanan Saya</label>
+    </customLabels>
+    <customLabels>
+        <name
+    >MobileDashboard_card_modal_design_tab_example_cannot_complete</name>
+        <label>Tidak Dapat Menyelesaikan</label>
+    </customLabels>
+    <customLabels>
+        <name>MobileDashboard_card_modal_design_tab_example_canceled</name>
+        <label>Dibatalkan</label>
+    </customLabels>
+    <customLabels>
+        <name>MobileDashboard_card_modal_design_tab_example_completed</name>
+        <label>Selesai</label>
+    </customLabels>
+    <customLabels>
+        <name>MobileDashboard_card_modal_design_tab_example_scheduled</name>
+        <label>Dijadwalkan</label>
+    </customLabels>
+    <customLabels>
+        <name>MobileDashboard_card_modal_design_tab_example_in_progress</name>
+        <label>Sedang Berlangsung</label>
+    </customLabels>
+    <customLabels>
         <name>MobileDashboard_card_modal_design_tab_card_data_title</name>
         <label>Data Kartu</label>
     </customLabels>
