--- a/projects/MobileDashboard/force-app/main/default/translations/ko.translation-meta.xml
+++ b/projects/MobileDashboard/force-app/main/default/translations/ko.translation-meta.xml
@@ -155,6 +155,31 @@
     >더 넓은 세로 간격을 사용합니다. 긴 필드 이름에 권장됩니다.</label>
     </customLabels>
     <customLabels>
+        <name>MobileDashboard_card_modal_design_tab_example_my_sa</name>
+        <label>내 서비스 약속</label>
+    </customLabels>
+    <customLabels>
+        <name
+    >MobileDashboard_card_modal_design_tab_example_cannot_complete</name>
+        <label>완료할 수 없음</label>
+    </customLabels>
+    <customLabels>
+        <name>MobileDashboard_card_modal_design_tab_example_canceled</name>
+        <label>취소됨</label>
+    </customLabels>
+    <customLabels>
+        <name>MobileDashboard_card_modal_design_tab_example_completed</name>
+        <label>완료</label>
+    </customLabels>
+    <customLabels>
+        <name>MobileDashboard_card_modal_design_tab_example_scheduled</name>
+        <label>일정 예약됨</label>
+    </customLabels>
+    <customLabels>
+        <name>MobileDashboard_card_modal_design_tab_example_in_progress</name>
+        <label>진행 중</label>
+    </customLabels>
+    <customLabels>
         <name>MobileDashboard_card_modal_design_tab_card_data_title</name>
         <label>카드 데이터</label>
     </customLabels>
