--- a/projects/MobileDashboard/force-app/main/default/translations/nl_NL.translation-meta.xml
+++ b/projects/MobileDashboard/force-app/main/default/translations/nl_NL.translation-meta.xml
@@ -157,6 +157,31 @@
     >Gebruikt meer verticale ruimte. Aanbevolen voor lange veldnamen.</label>
     </customLabels>
     <customLabels>
+        <name>MobileDashboard_card_modal_design_tab_example_my_sa</name>
+        <label>Mijn serviceafspraken</label>
+    </customLabels>
+    <customLabels>
+        <name
+    >MobileDashboard_card_modal_design_tab_example_cannot_complete</name>
+        <label>Kan niet voltooien</label>
+    </customLabels>
+    <customLabels>
+        <name>MobileDashboard_card_modal_design_tab_example_canceled</name>
+        <label>Geannuleerd</label>
+    </customLabels>
+    <customLabels>
+        <name>MobileDashboard_card_modal_design_tab_example_completed</name>
+        <label>Klaar</label>
+    </customLabels>
+    <customLabels>
+        <name>MobileDashboard_card_modal_design_tab_example_scheduled</name>
+        <label>Gepland</label>
+    </customLabels>
+    <customLabels>
+        <name>MobileDashboard_card_modal_design_tab_example_in_progress</name>
+        <label>Wordt uitgevoerd</label>
+    </customLabels>
+    <customLabels>
         <name>MobileDashboard_card_modal_design_tab_card_data_title</name>
         <label>Kaartgegevens</label>
     </customLabels>
