--- a/projects/MobileDashboard/force-app/main/default/translations/vi.translation-meta.xml
+++ b/projects/MobileDashboard/force-app/main/default/translations/vi.translation-meta.xml
@@ -157,6 +157,31 @@
     >Sử dụng nhiều không gian hơn theo chiều dọc. Khuyên dùng cho tên trường dài.</label>
     </customLabels>
     <customLabels>
+        <name>MobileDashboard_card_modal_design_tab_example_my_sa</name>
+        <label>Cuộc Hẹn Dịch Vụ Của Tôi</label>
+    </customLabels>
+    <customLabels>
+        <name
+    >MobileDashboard_card_modal_design_tab_example_cannot_complete</name>
+        <label>Không Thể Hoàn Thành</label>
+    </customLabels>
+    <customLabels>
+        <name>MobileDashboard_card_modal_design_tab_example_canceled</name>
+        <label>Đã hủy</label>
+    </customLabels>
+    <customLabels>
+        <name>MobileDashboard_card_modal_design_tab_example_completed</name>
+        <label>Hoàn Tất</label>
+    </customLabels>
+    <customLabels>
+        <name>MobileDashboard_card_modal_design_tab_example_scheduled</name>
+        <label>Đã lên lịch</label>
+    </customLabels>
+    <customLabels>
+        <name>MobileDashboard_card_modal_design_tab_example_in_progress</name>
+        <label>Đang Tiến Hành</label>
+    </customLabels>
+    <customLabels>
         <name>MobileDashboard_card_modal_design_tab_card_data_title</name>
         <label>Dữ Liệu Thẻ</label>
     </customLabels>
